# real_time_object_detection

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.py  requiremets.txt
include/: Input.hpp  InputCamera.hpp  Model.hpp  ModelONNX.hpp  ModelYOLO.hpp  ModelYOLOv8.hpp  camera.hpp
scripts/: YOLO_to_ONNX.py
src/: Inference.cpp  Input.cpp  InputCamera.cpp  ModelONNX.cpp  ModelYOLO.cpp  ModelYOLOv8.cpp  camera.cpp  main.cpp
